cmake_minimum_required(VERSION 3.4.1)

# build native_app_glue as a static lib
set(${CMAKE_C_FLAGS}, "${CMAKE_C_FLAGS}")
add_library(native_app_glue STATIC
    ${ANDROID_NDK}/sources/android/native_app_glue/android_native_app_glue.c)

# now build app's shared lib
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")

# Export ANativeActivity_onCreate(),
# Refer to: https://github.com/android-ndk/ndk/issues/381.
set(CMAKE_SHARED_LINKER_FLAGS
    "${CMAKE_SHARED_LINKER_FLAGS} -v -u ANativeActivity_onCreate")

file(GLOB SOURCES "*.c")

if(${ANDROID_ABI} STREQUAL "arm64-v8a" OR ${ANDROID_ABI} STREQUAL "x86_64")
 add_library(animdustry SHARED
 "/home/anuke/.nimble/pkgs/stb_image-2.5/stb_image/read.c"
"/home/anuke/Projects/soloud/src/backend/opensles/soloud_opensles.cpp"
"/home/anuke/Projects/soloud/src/c_api/soloud_c.cpp"
"/home/anuke/Projects/soloud/src/core/soloud.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_audiosource.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_bus.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_core_3d.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_core_basicops.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_core_faderops.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_core_filterops.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_core_getters.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_core_setters.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_core_voicegroup.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_core_voiceops.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_fader.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_fft.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_fft_lut.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_file.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_filter.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_misc.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_queue.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_thread.cpp"
"/home/anuke/Projects/soloud/src/audiosource/wav/soloud_wav_ogg.cpp"
"/home/anuke/Projects/soloud/src/audiosource/wav/soloud_wavstream_ogg.cpp"
"/home/anuke/Projects/soloud/src/audiosource/wav/stb_vorbis.c"
"/home/anuke/Projects/soloud/src/filter/soloud_bassboostfilter.cpp"
"/home/anuke/Projects/soloud/src/filter/soloud_biquadresonantfilter.cpp"
"/home/anuke/Projects/soloud/src/filter/soloud_dcremovalfilter.cpp"
"/home/anuke/Projects/soloud/src/filter/soloud_echofilter.cpp"
"/home/anuke/Projects/soloud/src/filter/soloud_fftfilter.cpp"
"/home/anuke/Projects/soloud/src/filter/soloud_flangerfilter.cpp"
"/home/anuke/Projects/soloud/src/filter/soloud_freeverbfilter.cpp"
"/home/anuke/Projects/soloud/src/filter/soloud_lofifilter.cpp"
"/home/anuke/Projects/soloud/src/filter/soloud_robotizefilter.cpp"
"/home/anuke/Projects/soloud/src/filter/soloud_waveshaperfilter.cpp"
"/home/anuke/Projects/absurd/android/src/c64/stdlib_digitsutils.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/stdlib_assertions.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/stdlib_formatfloat.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/stdlib_dollars.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/stdlib_io.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/stdlib_system.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/stdlib_bitops.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/stdlib_math.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@spolymorph-0.3.0@spolymorph@ssharedtypes.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/stdlib_parseutils.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/stdlib_unicode.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/stdlib_algorithm.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/stdlib_strutils.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/stdlib_strformat.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/stdlib_hashes.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/stdlib_tables.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/stdlib_sequtils.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/stdlib_sets.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/stdlib_pathnorm.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/stdlib_options.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/stdlib_times.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/stdlib_os.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@spolymorph-0.3.0@spolymorph@sprivate@sutils.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@spolymorph-0.3.0@spolymorph@scomponents.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/stdlib_sysrand.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/stdlib_random.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@sfau@ssrc@sfau@sfmath.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@sfau@ssrc@sfau@sgl@sglad.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@sfau@ssrc@sfau@sgl@sglproc.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@sstb_image-2.5@sstb_image@sread.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/stdlib_streams.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@sfau@ssrc@sfau@sassets.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@sfau@ssrc@sfau@stexture.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@sfau@ssrc@sfau@scolor.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@sfau@ssrc@sfau@sframebuffer.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@sfau@ssrc@sfau@sshader.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@sfau@ssrc@sfau@sscreenbuffer.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@sfau@ssrc@sfau@smesh.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@sfau@ssrc@sfau@spatch.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@sfau@ssrc@sfau@sbatch.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@sfau@ssrc@sfau@satlas.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@sfau@ssrc@sfau@sglobals.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@sfau@ssrc@sfau@sdraw.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@sfau@ssrc@sfau@sinput.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@sfau@ssrc@sfau@saudio.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@sfau@ssrc@score.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@sfau@ssrc@sfau@sg2@spacker.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@sbumpy-1.0.3@sbumpy.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@schroma-0.2.5@schroma.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@spixie-4.0.1@spixie@scommon.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@spixie-4.0.1@spixie@sblends.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@spixie-4.0.1@spixie@sinternal.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@spixie-4.0.1@spixie@smasks.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@spixie-4.0.1@spixie@simages.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@spixie-4.0.1@spixie@spaints.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@spixie-4.0.1@spixie@spaths.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@spixie-4.0.1@spixie@sfontformats@sopentype.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@spixie-4.0.1@spixie@sfontformats@ssvgfont.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@spixie-4.0.1@spixie@sfonts.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@szippy-0.9.7@szippy@scommon.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@szippy-0.9.7@szippy@sinternal.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@szippy-0.9.7@szippy@sbitstreams.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@szippy-0.9.7@szippy@scrc.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@szippy-0.9.7@szippy@slz77.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@szippy-0.9.7@szippy@ssnappy.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/stdlib_heapqueue.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@szippy-0.9.7@szippy@sdeflate.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@szippy-0.9.7@szippy@sinflate.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@szippy-0.9.7@szippy@sgzip.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@szippy-0.9.7@szippy.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@sfau@ssrc@sfau@sg2@sfont.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@sfau@ssrc@sfau@sg2@sui.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@sfau@ssrc@sfau@sg2@sbloom.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@mtypes.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@mvars.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@m..@s..@s..@s.nimble@spkgs@sjsony-1.0.1@sjsony.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@msaveio.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@mpatterns.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@mmaps.nim.c"
"/home/anuke/Projects/absurd/android/src/c64/@mmain.nim.c"
"/home/anuke/Projects/glfm/glfm/src/glfm_platform_android.c"
"/home/anuke/Projects/glfm/glfm/src/glfm_platform.h"
 )
else()
 add_library(animdustry SHARED
 "/home/anuke/.nimble/pkgs/stb_image-2.5/stb_image/read.c"
"/home/anuke/Projects/soloud/src/backend/opensles/soloud_opensles.cpp"
"/home/anuke/Projects/soloud/src/c_api/soloud_c.cpp"
"/home/anuke/Projects/soloud/src/core/soloud.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_audiosource.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_bus.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_core_3d.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_core_basicops.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_core_faderops.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_core_filterops.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_core_getters.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_core_setters.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_core_voicegroup.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_core_voiceops.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_fader.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_fft.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_fft_lut.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_file.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_filter.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_misc.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_queue.cpp"
"/home/anuke/Projects/soloud/src/core/soloud_thread.cpp"
"/home/anuke/Projects/soloud/src/audiosource/wav/soloud_wav_ogg.cpp"
"/home/anuke/Projects/soloud/src/audiosource/wav/soloud_wavstream_ogg.cpp"
"/home/anuke/Projects/soloud/src/audiosource/wav/stb_vorbis.c"
"/home/anuke/Projects/soloud/src/filter/soloud_bassboostfilter.cpp"
"/home/anuke/Projects/soloud/src/filter/soloud_biquadresonantfilter.cpp"
"/home/anuke/Projects/soloud/src/filter/soloud_dcremovalfilter.cpp"
"/home/anuke/Projects/soloud/src/filter/soloud_echofilter.cpp"
"/home/anuke/Projects/soloud/src/filter/soloud_fftfilter.cpp"
"/home/anuke/Projects/soloud/src/filter/soloud_flangerfilter.cpp"
"/home/anuke/Projects/soloud/src/filter/soloud_freeverbfilter.cpp"
"/home/anuke/Projects/soloud/src/filter/soloud_lofifilter.cpp"
"/home/anuke/Projects/soloud/src/filter/soloud_robotizefilter.cpp"
"/home/anuke/Projects/soloud/src/filter/soloud_waveshaperfilter.cpp"
"/home/anuke/Projects/absurd/android/src/c32/stdlib_digitsutils.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/stdlib_assertions.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/stdlib_formatfloat.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/stdlib_dollars.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/stdlib_io.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/stdlib_system.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/stdlib_bitops.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/stdlib_math.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@spolymorph-0.3.0@spolymorph@ssharedtypes.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/stdlib_parseutils.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/stdlib_unicode.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/stdlib_algorithm.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/stdlib_strutils.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/stdlib_strformat.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/stdlib_hashes.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/stdlib_tables.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/stdlib_sequtils.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/stdlib_sets.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/stdlib_pathnorm.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/stdlib_options.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/stdlib_times.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/stdlib_os.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@spolymorph-0.3.0@spolymorph@sprivate@sutils.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@spolymorph-0.3.0@spolymorph@scomponents.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/stdlib_sysrand.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/stdlib_random.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@sfau@ssrc@sfau@sfmath.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@sfau@ssrc@sfau@sgl@sglad.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@sfau@ssrc@sfau@sgl@sglproc.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@sstb_image-2.5@sstb_image@sread.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/stdlib_streams.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@sfau@ssrc@sfau@sassets.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@sfau@ssrc@sfau@stexture.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@sfau@ssrc@sfau@scolor.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@sfau@ssrc@sfau@sframebuffer.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@sfau@ssrc@sfau@sshader.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@sfau@ssrc@sfau@sscreenbuffer.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@sfau@ssrc@sfau@smesh.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@sfau@ssrc@sfau@spatch.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@sfau@ssrc@sfau@sbatch.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@sfau@ssrc@sfau@satlas.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@sfau@ssrc@sfau@sglobals.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@sfau@ssrc@sfau@sdraw.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@sfau@ssrc@sfau@sinput.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@sfau@ssrc@sfau@saudio.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@sfau@ssrc@score.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@sfau@ssrc@sfau@sg2@spacker.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@sbumpy-1.0.3@sbumpy.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@schroma-0.2.5@schroma.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@spixie-4.0.1@spixie@scommon.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@spixie-4.0.1@spixie@sblends.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@spixie-4.0.1@spixie@sinternal.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@spixie-4.0.1@spixie@smasks.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@spixie-4.0.1@spixie@simages.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@spixie-4.0.1@spixie@spaints.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@spixie-4.0.1@spixie@spaths.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@spixie-4.0.1@spixie@sfontformats@sopentype.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@spixie-4.0.1@spixie@sfontformats@ssvgfont.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@spixie-4.0.1@spixie@sfonts.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@szippy-0.9.7@szippy@scommon.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@szippy-0.9.7@szippy@sinternal.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@szippy-0.9.7@szippy@sbitstreams.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@szippy-0.9.7@szippy@scrc.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@szippy-0.9.7@szippy@slz77.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@szippy-0.9.7@szippy@ssnappy.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/stdlib_heapqueue.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@szippy-0.9.7@szippy@sdeflate.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@szippy-0.9.7@szippy@sinflate.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@szippy-0.9.7@szippy@sgzip.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@szippy-0.9.7@szippy.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@sfau@ssrc@sfau@sg2@sfont.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@sfau@ssrc@sfau@sg2@sui.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@sfau@ssrc@sfau@sg2@sbloom.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@mtypes.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@mvars.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@m..@s..@s..@s.nimble@spkgs@sjsony-1.0.1@sjsony.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@msaveio.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@mpatterns.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@mmaps.nim.c"
"/home/anuke/Projects/absurd/android/src/c32/@mmain.nim.c"
"/home/anuke/Projects/glfm/glfm/src/glfm_platform_android.c"
"/home/anuke/Projects/glfm/glfm/src/glfm_platform.h"
 )
endif()

target_include_directories(animdustry PRIVATE
${ANDROID_NDK}/sources/android/native_app_glue
"/home/anuke/.choosenim/toolchains/nim-1.6.4/lib"
"/home/anuke/Projects/glfm/glfm/include"
"/home/anuke/Projects/glfm/glfm/src"
"/home/anuke/Projects/glfm/glfm/example/src"
"/home/anuke/Projects/soloud/include"
)

set(CMAKE_CXX_FLAGS "-O3 -DSOLOUD_OGG_ONLY -DWITH_OPENSLES -D__ANDROID__")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DSOLOUD_OGG_ONLY -DWITH_OPENSLES -D__ANDROID__")

# add lib dependencies
target_link_libraries(animdustry
    android
    native_app_glue
    EGL
    GLESv2
    log
    OpenSLES
    )



